# rustls-rustcrypto

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  deny.toml  devfile.yaml  test-cipher-suites.sh
.github/: dependabot.yml
.github/workflows/: cipher-suite-test.yml  esp32-test.yml  local_openssl.yml  rustls-real-socket-test.yml  rustls-rustcrypto.yml
acceptance-test/: Cargo.toml
acceptance-test/tests/: integrations.rs
acceptance-test/tests/integrations/: badssl.rs  generic.rs  pki.rs  server.rs  utils.rs
certs/: Makefile  ca.rsa4096.crt  ca.rsa4096.key  rustcryp.to.rsa4096.ca_signed.crt  rustcryp.to.rsa4096.csr  rustcryp.to.rsa4096.key
examples/: client.rs  server.rs
examples-xsmall/: Cargo.toml  README.md
examples-xsmall/.cargo/: config.toml
examples-xsmall/examples/: client.rs  server.rs
src/: aead.rs  hash.rs  hmac.rs  kx.rs  lib.rs  misc.rs  quic.rs  sign.rs  ticketer.rs  tls12.rs  tls13.rs  verify.rs
src/aead/: aes.rs  ccm.rs  chacha20.rs  gcm.rs
src/aead/chacha20/: tls12.rs  tls13.rs
src/aead/gcm/: tls12.rs  tls13.rs
src/kx/: hybrid.rs  mlkem.rs  nist.rs  x25519.rs  x448.rs
src/sign/: ecdsa.rs  eddsa.rs  rand.rs  rsa.rs
src/sign/ecdsa/: nist.rs
src/sign/eddsa/: ed25519.rs  ed448.rs
src/tls12/: aead.rs  ecdsa.rs  rsa.rs  suites.rs
src/tls12/aead/: ccm.rs  chacha20.rs  common.rs  gcm.rs
src/tls12/suites/: ecdsa.rs  rsa.rs  schemes.rs
src/tls13/: aead.rs  aes.rs  chacha20.rs  suites.rs
src/tls13/aead/: ccm.rs  chacha20.rs  common.rs  gcm.rs
src/tls13/suites/: aes.rs  chacha20.rs
src/verify/: ecdsa.rs  eddsa.rs  rsa.rs
src/verify/ecdsa/: nist.rs
src/verify/eddsa/: ed25519.rs  ed448.rs
tests/: badssl.rs  bare-ping-poing.rs  builder.rs  client.rs  ecdsa_sec1.rs  eddsa_sec1.rs  fake_cert_client_verifier.rs  fake_cert_server_resolver.rs  fake_cert_server_verifier.rs  fake_time.rs  generic.rs  http_client.rs  integrations.rs  mem_socket.rs
tests/integrations/: badssl.rs  generic.rs  hyper_server.rs  pki.rs  server.rs
validation/: README.md
validation/consumer-no_std/: Cargo.toml  README.md
validation/consumer-no_std/src/: fakes.rs  lib.rs
validation/consumer-no_std/src/fakes/: fake_cert_verifier.rs  fake_time_provider.rs
validation/esp32-test/: .gitignore  Cargo.toml  README.md
validation/esp32-test/.cargo/: config.toml
validation/esp32-test/src/: main.rs
validation/local_ping_pong_openssl/: .gitignore  Cargo.toml  README.md  build.rs
validation/local_ping_pong_openssl/certs/: Makefile  cert.cnf  openssl.cnf
validation/local_ping_pong_openssl/src/: lib.rs  net_util.rs  openssl_util.rs  rustls_util.rs
validation/local_ping_pong_openssl/src/openssl_util/: cipher_suites.rs  groups_list.rs
validation/quic-test/: Cargo.toml
validation/quic-test/src/: key.der  main.rs
validation/rustls-real-socket-test/: Cargo.toml  README.md
validation/rustls-real-socket-test/src/: cert.der  main.rs
