[package]
name = "rustls-rustcrypto"
description = """
Pure Rust cryptography provider for the Rustls TLS library using algorithm implementations from the
RustCrypto organization
"""
version = "0.0.2-alpha"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RustCrypto/rustls-rustcrypto"
categories = ["cryptography", "no-std"]
keywords = ["rustls", "tls"]
edition = "2021"
rust-version = "1.75"
resolver = "1" # Hack to enable the `custom` feature of `getrandom`

# Ensure all dependencies + feats are mapped to crate features for correct usage
# default features often have std breaking no_std and potentially other unwanted
[dependencies]
aead = { version = "=0.6.0-rc.5", default-features = false }
aes-gcm = { version = "=0.11.0-rc.2", default-features = false, features = ["aes", "alloc"] }
chacha20poly1305 = { version = "=0.11.0-rc.2", default-features = false }
crypto-common = { version = "=0.2.0-rc.9", default-features = false }
der = { version = "=0.8.0-rc.10", default-features = false }
digest = { version = "=0.11.0-rc.5", default-features = false }
ecdsa = { version = "=0.17.0-rc.12", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "=3.0.0-pre.4", default-features = false, features = ["pkcs8"] }
hmac = { version = "=0.13.0-rc.3", default-features = false }
p256 = { version = "=0.14.0-rc.4", default-features = false, features = ["pem", "ecdsa", "ecdh"] }
p384 = { version = "=0.14.0-rc.4", default-features = false, features = ["pem", "ecdsa", "ecdh"] }
paste = { version = "1", default-features = false }
pkcs8 = { version = "=0.11.0-rc.8", default-features = false }
pki-types = { package = "rustls-pki-types", version = "1", default-features = false }
getrandom = { version = "=0.4.0-rc.0", default-features = false, features = ["sys_rng"] }
rsa = { version = "=0.10.0-rc.12", default-features = false, features = ["sha2", "encoding"] }
rustls = { version = "0.23", default-features = false }
sha2 = { version = "=0.11.0-rc.3", default-features = false }
signature = { version = "=3.0.0-rc.6", default-features = false }
x25519-dalek = { version = "=3.0.0-pre.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "=0.4.0-rc.0", default-features = false, features = ["wasm_js"] }

[features]
default = ["std", "tls12", "zeroize"]
logging = ["rustls/logging"]
tls12 = ["rustls/tls12"]

# Only enable feature in upstream if there is an overall effect e.g. aead/alloc in-place
# zeroize is another typical that can be turned off

# TODO: go through all of these that what gets exposed re: std error type
std = ["alloc", "pki-types/std", "rustls/std"]
# TODO: go through all of these to ensure to_vec etc. impls are exposed
alloc = ["pki-types/alloc", "aead/alloc", "ed25519-dalek/alloc"]
zeroize = ["ed25519-dalek/zeroize", "x25519-dalek/zeroize"]
