[package]
name = "examples-xsmall"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.75"
hyper = "0.14.27"
hyper-rustls = { version = "=0.25.0-alpha.1", features = ["http2", "webpki-roots"] }
pki-types = { package = "rustls-pki-types", version = "0.2.1", default-features = false }
rcgen = "0.11.1"
rustls = { version = "=0.22.0-alpha.4", default-features = false }
rustls-rustcrypto = { path = "../" }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net"] }
vc-ltl = "5.0.8"

[features]
tls12 = ["rustls-rustcrypto/tls12"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[patch.crates-io]
rustls = { git = 'https://github.com/rustls/rustls' }
tokio-rustls = { git = 'https://github.com/rustls/tokio-rustls' }
hyper-rustls = { git = "https://github.com/stevefan1999-personal/hyper-rustls" }
rcgen = { git = "https://github.com/rustls/rcgen" }