[package]
name = "examples-xsmall"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1"
hyper = "1"
hyper-rustls = { version = "0.27", features = ["http2", "webpki-roots"] }
pki-types = { package = "rustls-pki-types", version = "1", default-features = false }
rcgen = "0.14"
rustls = { version = "0.23", default-features = false }
rustls-rustcrypto = { path = "../" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net"] }
vc-ltl = "5"

[features]
tls12 = ["rustls-rustcrypto/tls12"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
